--- a/solution/1161.Maximum-Level-Sum-of-a-Binary-Tree.md
+++ b/solution/1161.Maximum-Level-Sum-of-a-Binary-Tree.md
@@ -1,14 +1,12 @@
-# 1161. Maximum Level Sum of a Binary Tree[最大层内元素和]
-
-## 信息卡片
-
-* 时间：2020-02-17
-* 题目链接：[English](https://leetcode.com/problems/maximum-level-sum-of-a-binary-tree/)/[中文](https://leetcode-cn.com/problems/maximum-level-sum-of-a-binary-tree/)
+# 1161. Maximum Level Sum of a Binary Tree
+## Information
+* Date：2020-02-17
+* Link：[English](https://leetcode.com/problems/maximum-level-sum-of-a-binary-tree/)/[中文](https://leetcode-cn.com/problems/maximum-level-sum-of-a-binary-tree/)
 * Tag：`Tree` `BFS`
-## 题目描述
+
+## Problem Description
 Given the root of a binary tree, the level of its root is 1, the level of its children is 2, and so on.  
 Return the smallest level X such that the sum of all the values of nodes at level X is maximal.   
-
 ### Example 1:  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1161_ex1.png)  
 Input: [1,7,0,7,-8,null,null]  
@@ -18,30 +16,18 @@ Level 1 sum = 1.
 Level 2 sum = 7 + 0 = 7.  
 Level 3 sum = 7 + -8 = -1.  
 So we return the level with the maximum sum which is level 2.  
-
 ### Note:
 1. The number of nodes in the given tree is between 1 and 10^4.
 2. -10^5 <= node.val <= 10^5
 
-## 参考答案   
-
-
-#### 分析
-
+## Solutions
+### Analysis
 这题考察的是二叉树的层次遍历(BFS)，我们只需要记录每一层的和，记录第一组最大值的层数即可。层次遍历仍然使用的是迭代法和递归法。
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.迭代法
-
 * Runtime: 8 ms, faster than 75.79% of Java online submissions for Maximum Level Sum of a Binary Tree.
 * Memory Usage: 43.2 MB, less than 100.00% of Java online submissions for Maximum Level Sum of a Binary Tree.
-
 ```Java
 /**
  * @author RyuuI
@@ -90,13 +76,9 @@ class Solution {
     }
 }
 ```
-
-
 2.递归法
-
 * Runtime: 4 ms, faster than 98.05% of Java online submissions for Maximum Level Sum of a Binary Tree.
 * Memory Usage: 42.7 MB, less than 100.00% of Java online submissions for Maximum Level Sum of a Binary Tree.
-
 ```Java
 /**
  * @author RyuuI
@@ -138,13 +120,7 @@ class Solution {
 	}
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
