--- a/solution/1306.Jump-Game-III.md
+++ b/solution/1306.Jump-Game-III.md
@@ -1,14 +1,12 @@
-# 1306. Jump Game III[跳跃游戏 III]
-
-## 信息卡片
-
-* 时间：2020-02-23
-* 题目链接：[English](https://leetcode.com/problems/jump-game-iii/)/[中文](https://leetcode-cn.com/problems/jump-game-iii/)
+# 1306. Jump Game III
+## Information
+* Date：2020-02-23
+* Link：[English](https://leetcode.com/problems/jump-game-iii/)/[中文](https://leetcode-cn.com/problems/jump-game-iii/)
 * Tag：`Graph` `DFS` `BFS`
-## 题目描述
+
+## Problem Description
 Given an array of non-negative integers arr, you are initially positioned at start index of the array. When you are at index i, you can jump to i + arr[i] or i - arr[i], check if you can reach to any index with value 0.  
 Notice that you can not jump outside of the array at any time.  
-
 ### Example 1:  
 Input: arr = [4,2,3,0,3,1,2], start = 5  
 Output: true  
@@ -16,79 +14,32 @@ Explanation:
 All possible ways to reach at index 3 with value 0 are:  
 index 5 -> index 4 -> index 1 -> index 3  
 index 5 -> index 6 -> index 4 -> index 1 -> index 3  
-
 ### Example 2:  
 Input: arr = [4,2,3,0,3,1,2], start = 0  
 Output: true  
 Explanation:  
 One possible way to reach at index 3 with value 0 is:  
 index 0 -> index 4 -> index 1 -> index 3 
-
 ### Example 3: 
 Input: arr = [3,0,2,1,2], start = 2  
 Output: false  
 Explanation: There is no way to reach at index 1 with value 0.  
-
 ### Constraints:
 * 1 <= arr.length <= 5 * 10^4
 * 0 <= arr[i] < arr.length
 * 0 <= start < arr.length  
 
-
-## 参考答案   
-
-
-#### 分析
-
+## Solutions
+### Analysis
 这道题考察的是图的连通性问题，即start顶点与值为0的顶点是否存在某条连通路径。
-
-#### 思路
 这里提供三种解法。前两种即图常用的DFS算法与BFS算法，第三种为分治算法
 * 图的DFS算法与BFS算法: 值得注意的是，本题中如果使用邻接矩阵保存顶点间的关系，会出现内存溢出现象，所以我们使用邻接链表进行存储。
 * 分治算法: 分别求解start顶点的start-arr[start]顶点，及start+arr[start]顶点的值是否为0。
-
-#### 代码
-
-##### JAVA
-***报错的解法***  
-邻接矩阵会大量使用内存空间，导致Memory Limit Exceeded报错。
-```Java
-/**
- * @author RyuuI
- */
-class Solution {
-	boolean[] visited;
-	public boolean canReach(int[] arr, int start) {
-		visited = new boolean[arr.length];
-		int[][] arr_matrix = new int[arr.length][arr.length];
-		for(int i=0;i<arr.length;i++){
-			arr_matrix[i][i] =1;
-			if((i-arr[i])>=0)
-				arr_matrix[i][i-arr[i]] = 1;
-			if((i+arr[i])<arr.length)
-				arr_matrix[i][i+arr[i]] = 1;
-		}
-		return dfs(arr,arr_matrix,start,visited);
-	}
-	private boolean dfs(int[] arr,int[][] arr_matrix,int start,boolean[] visited){
-		if(arr[start]==0)
-			return true;
-		visited[start] = true;
-		for(int i=0;i<arr.length;i++){
-			if(arr_matrix[start][i] ==1 && !visited[i])
-				if(arr[i] == 0 || dfs(arr,arr_matrix,i,visited))
-					return true;
-			}
-			return false;
-		}
-	}
-```
-
+### Source Code
+#### Java
 1.DFS算法
-
 * Runtime: 6 ms, faster than 6.12% of Java online submissions for Jump Game III.
 * Memory Usage: 51.1 MB, less than 100.00% of Java online submissions for Jump Game III.
-
 ```Java
 /**
  * @author RyuuI
@@ -120,12 +71,9 @@ class Solution {
 	}
 }
 ```
-
 2.BFS算法
-
 * Runtime: 6 ms, faster than 6.12% of Java online submissions for Jump Game III.
 * Memory Usage: 51.8 MB, less than 100.00% of Java online submissions for Jump Game III.
-
 ```Java
 /**
  * @author RyuuI
@@ -160,12 +108,9 @@ class Solution {
 	}
 }
 ```
-
 3.分治算法
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Jump Game III.
 * Memory Usage: 42.9 MB, less than 100.00% of Java online submissions for Jump Game III.
-
 ```Java
 /**
  * @author RyuuI
@@ -189,13 +134,40 @@ class Solution {
 	}
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+***报错的解法***  
+邻接矩阵会大量使用内存空间，导致Memory Limit Exceeded报错。
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {
+	boolean[] visited;
+	public boolean canReach(int[] arr, int start) {
+		visited = new boolean[arr.length];
+		int[][] arr_matrix = new int[arr.length][arr.length];
+		for(int i=0;i<arr.length;i++){
+			arr_matrix[i][i] =1;
+			if((i-arr[i])>=0)
+				arr_matrix[i][i-arr[i]] = 1;
+			if((i+arr[i])<arr.length)
+				arr_matrix[i][i+arr[i]] = 1;
+		}
+		return dfs(arr,arr_matrix,start,visited);
+	}
+	private boolean dfs(int[] arr,int[][] arr_matrix,int start,boolean[] visited){
+		if(arr[start]==0)
+			return true;
+		visited[start] = true;
+		for(int i=0;i<arr.length;i++){
+			if(arr_matrix[start][i] ==1 && !visited[i])
+				if(arr[i] == 0 || dfs(arr,arr_matrix,i,visited))
+					return true;
+			}
+			return false;
+		}
+	}
+```
+#### C
+#### C++
+#### Python
+#### JS
