--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -1,44 +1,26 @@
-# 1315.Sum of Nodes with Even-Valued Grandparent[祖父节点值为偶数的节点和]
+# 1315. Sum of Nodes with Even-Valued Grandparent
+## Information
+* Date：2020-01-19
+* Link：[English](https://leetcode.com/problems/sum-of-nodes-with-even-valued-grandparent/)/[中文](https://leetcode-cn.com/problems/sum-of-nodes-with-even-valued-grandparent/)
+* Tag：`Tree` `DFS` `BFS`
 
-## 信息卡片
-
-* 时间：2020-01-19
-* 题目链接：[English](https://leetcode.com/problems/sum-of-nodes-with-even-valued-grandparent/)/[中文](https://leetcode-cn.com/problems/sum-of-nodes-with-even-valued-grandparent/)
-* Tag：`Tree` `DFS` `BFS`  
-## 题目描述
+## Problem Description
 Given a binary tree, return the sum of values of nodes with even-valued grandparent.  (A grandparent of a node is the parent of its parent, if it exists.)   
 If there are no nodes with an even-valued grandparent, return 0.
-
-
-Example1:  
+### Example1:  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1315_ex1.png)  
-
 Input: root = [6,7,8,2,7,1,3,9,null,1,4,null,null,null,5]   
 Output: 18   
 Explanation: The red nodes are the nodes with even-value grandparent while the blue nodes are the even-value grandparents.
 
-
-## 参考答案   
-
-
-### 1. 宽度优先搜索(BFS)
-
-#### 分析
-
+## Solutions   
+### Analysis
 这道题考察的是二叉树遍历的算法，所以各种DFS和BFS都可以求解，这里使用的是BFS的方法
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.递归法
-
 * Runtime: 1 ms, faster than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 * Memory Usage: 51.2 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
-
 ```Java
 /**
  * @author RyuuI
@@ -72,13 +54,9 @@ class Solution {
 	}
 }
 ```
-
-
 2.迭代法 
-
 * Runtime: 10 ms, faster than 6.47% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 * Memory Usage: 50.7 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
-
 ```Java
 /**
  * @author RyuuI
@@ -124,14 +102,7 @@ class Solution {
 }
 
 ```
-
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
