--- a/solution/1302.Deepest-Leaves-Sum.md
+++ b/solution/1302.Deepest-Leaves-Sum.md
@@ -1,41 +1,24 @@
-# 1302. Deepest Leaves Sum[层数最深叶子节点的和]
-
-## 信息卡片
-
-* 时间：2020-01-21
-* 题目链接：[English](https://leetcode.com/problems/deepest-leaves-sum/)/[中文](https://leetcode-cn.com/problems/deepest-leaves-sum/)
+# 1302. Deepest Leaves Sum
+## Information
+* Date：2020-01-21
+* Link：[English](https://leetcode.com/problems/deepest-leaves-sum/)/[中文](https://leetcode-cn.com/problems/deepest-leaves-sum/)
 * Tag：`Tree` `DFS` `BFS`
-## 题目描述
+
+## Problem Description
 Given a binary tree, return the sum of values of its deepest leaves.
-
-
-Example1:  
+### Example1:  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1302_ex1.png)  
-
 Input: root = [1,2,3,4,5,null,6,7,null,null,null,null,8]   
 Output: 15
 
-## 参考答案   
-
-
-### 1. 宽度优先搜索(BFS)
-
-#### 分析
-
+## Solutions 
+### Analysis
 这道题我采用的是层次遍历的算法，求出最后一层的节点值之和。
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.递归法
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Deepest Leaves Sum.
 * Memory Usage: 51.9 MB, less than 100.00% of Java online submissions for Deepest Leaves Sum.
-
 ```Java
 /**
  * @author RyuuI
@@ -70,13 +53,9 @@ class Solution {
 	}
 }
 ```
-
-
 2.迭代法 
-
 * Runtime: 5 ms, faster than 21.16% of Java online submissions for Deepest Leaves Sum.
 * Memory Usage: 51 MB, less than 100.00% of Java online submissions for Deepest Leaves Sum.
-
 ```Java
 /**
  * @author RyuuI
@@ -116,14 +95,7 @@ class Solution {
     }
 }
 ```
-
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
