--- a/solution/654.Maximum-Binary-Tree.md
+++ b/solution/654.Maximum-Binary-Tree.md
@@ -1,18 +1,16 @@
-# 654.Maximum Binary Tree[最大二叉树]
-
-## 信息卡片
-
-* 时间：2020-01-31
-* 题目链接：[English](https://leetcode.com/problems/maximum-binary-tree/)/[中文](https://leetcode-cn.com/problems/maximum-binary-tree/)
+# 654. Maximum Binary Tree
+## Information
+* Date：2020-01-31
+* Link：[English](https://leetcode.com/problems/maximum-binary-tree/)/[中文](https://leetcode-cn.com/problems/maximum-binary-tree/)
 * Tag：`Tree`
-## 题目描述
+
+## Problem Description
 Given an integer array with no duplicates. A maximum tree building on this array is defined as follow:  
 The root is the maximum number in the array.  
 The left subtree is the maximum tree constructed from left part subarray divided by the maximum number.  
 The right subtree is the maximum tree constructed from right part subarray divided by the maximum number.  
 Construct the maximum tree by the given array and output the root node of this tree.  
-
-Example 1:  
+### Example 1:  
 Input: [3,2,1,6,0,5]  
 Output: return the tree root node representing the following tree:  
 
@@ -23,29 +21,17 @@ Output: return the tree root node representing the following tree:
         2 0
          \
           1 
-
-Note:
+### Note:
 The size of the given array will be in the range [1,1000].
 
-## 参考答案   
-
-
-#### 分析
-
+## Solutions
+### Analysis
 使用分治思想，分别求整个数组的最大值和左右数组的最大值，依次递归即可。
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.递归法
-
 * Runtime: 2 ms, faster than 99.18% of Java online submissions for Maximum Binary Tree.
 * Memory Usage: 41.6 MB, less than 6.52% of Java online submissions for Maximum Binary Tree.
-
 ```Java
 * Memory Usage: 41.6 MB, less than 6.52% of Java online submissions for Maximum Binary Tree.
 /**
@@ -80,14 +66,7 @@ class Solution {
 	}
 }
 ```
-
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
