--- a/solution/814.Binary-Tree-Pruning.md
+++ b/solution/814.Binary-Tree-Pruning.md
@@ -1,62 +1,40 @@
-# 814. Binary Tree Pruning[二叉树剪枝]
-
-## 信息卡片
-
-* 时间：2020-01-29
-* 题目链接：[English](https://leetcode.com/problems/binary-tree-pruning/)/[中文](https://leetcode-cn.com/problems/binary-tree-pruning/)
+# 814. Binary Tree Pruning
+## Information
+* Date：2020-01-29
+* Link：[English](https://leetcode.com/problems/binary-tree-pruning/)/[中文](https://leetcode-cn.com/problems/binary-tree-pruning/)
 * Tag：`Tree` `DFS`
-## 题目描述
+
+## Problem Description
 We are given the head node root of a binary tree, where additionally every node's value is either a 0 or a 1.   
 Return the same tree where every subtree (of the given tree) not containing a 1 has been removed.  
 (Recall that the subtree of a node X is X, plus every node that is a descendant of X.)
-
-
-Example 1:  
+### Example 1:  
 Input: [1,null,0,0,1]  
-Output: [1,null,0,null,1]  
- 
+Output: [1,null,0,null,1]   
 Explanation:   
 Only the red nodes satisfy the property "every subtree not containing a 1".  
 The diagram on the right represents the answer.  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/814_ex1.png)   
-
-
-Example 2:  
+### Example 2:  
 Input: [1,0,1,0,0,0,1]  
 Output: [1,null,1,null,1]  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/814_ex2.png) 
-
-
-Example 3:  
+### Example 3:  
 Input: [1,1,0,1,1,0,1,0]  
 Output: [1,1,0,1,1,null,1]  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/814_ex3.png) 
-
-
-Note:  
+### Note:  
 The binary tree will have at most 100 nodes.  
 The value of each node will only be 0 or 1.  
 
-
-## 参考答案   
-
-
-#### 分析
-
+## Solutions  
+### Analysis
 如题目所示，这到底使用DFS进行遍历，要注意的问题是这道题需要实时剪枝（即把该节点置null），可以使用递归法和迭代法。  
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.递归法
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Pruning.
 * Memory Usage: 37.4 MB, less than 5.88% of Java online submissions for Binary Tree Pruning.
-
 ```Java
 /**
  * @author RyuuI
@@ -81,13 +59,9 @@ class Solution {
     }
 }
 ```
-
-
 2.迭代法  
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Pruning.
 * Memory Usage: 36.9 MB, less than 5.88% of Java online submissions for Binary Tree
-
 ```Java
 /**
  * @author RyuuI
@@ -134,13 +108,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
