--- a/solution/637.Average-of-Levels-in-Binary-Tree.md
+++ b/solution/637.Average-of-Levels-in-Binary-Tree.md
@@ -1,15 +1,12 @@
-# 637.Average of Levels in Binary Tree[二叉树的层平均值]
-
-## 信息卡片
-
-* 时间：2020-01-30
-* 题目链接：[English](https://leetcode.com/problems/average-of-levels-in-binary-tree/)/[中文](https://leetcode-cn.com/problems/average-of-levels-in-binary-tree/)
+# 637. Average of Levels in Binary Tree
+## Information
+* Date：2020-01-30
+* Link：[English](https://leetcode.com/problems/average-of-levels-in-binary-tree/)/[中文](https://leetcode-cn.com/problems/average-of-levels-in-binary-tree/)
 * Tag：`Tree` `BFS`
-## 题目描述
+
+## Problem Description
 Given a non-empty binary tree, return the average value of the nodes on each level in the form of an array.
-
-Example 1:  
-
+### Example 1:  
 Input:
 
         3
@@ -21,26 +18,14 @@ Output: [3, 14.5, 11]
 Explanation:  
 The average value of nodes on level 0 is 3,  on level 1 is 14.5, and on level 2 is 11. Hence return [3, 14.5, 11].  
 
-
-## 参考答案   
-
-
-#### 分析
-
+## Solutions
+### Analysis
 这道题是层次遍历的算法，只要遍历每一层，并且计算其平均值即可。值得注意的是，本题的存储要考虑到int型可能发生溢出，所以应该使用long型存储和的结果。  
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.递归法
-
 * Runtime: 2 ms, faster than 93.92% of Java online submissions for Average of Levels in Binary Tree.
 * Memory Usage: 42.9 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
-
 ```Java
 /**
  * @author RyuuI
@@ -85,13 +70,9 @@ class Solution {
 	}
 }
 ```
-
-
-2.迭代法  
-
+2.迭代法
 * Runtime: 5 ms, faster than 11.58% of Java online submissions for Average of Levels in Binary Tree.
 * Memory Usage: 44.7 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
-
 ```Java
 /**
  * @author RyuuI
@@ -139,13 +120,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
