--- a/solution/701.Insert-into-a-Binary-Search-Tree.md
+++ b/solution/701.Insert-into-a-Binary-Search-Tree.md
@@ -1,16 +1,13 @@
-# 701.Insert into a Binary Search Tree[二叉搜索树中的插入操作]
-
+# 701. Insert into a Binary Search Tree
 ## 信息卡片
-
-* 时间：2020-01-20
-* 题目链接：[English](https://leetcode.com/problems/insert-into-a-binary-search-tree/)/[中文](https://leetcode-cn.com/problems/insert-into-a-binary-search-tree/)
+* Date：2020-01-20
+* Link：[English](https://leetcode.com/problems/insert-into-a-binary-search-tree/)/[中文](https://leetcode-cn.com/problems/insert-into-a-binary-search-tree/)
 * Tag：`Tree`
-## 题目描述
+
+## Problem Description
 Given the root node of a binary search tree (BST) and a value to be inserted into the tree, insert the value into the BST. Return the root node of the BST after the insertion. It is guaranteed that the new value does not exist in the original BST.  
-Note that there may exist multiple valid ways for the insertion, as long as the tree remains a BST after insertion. You can return any of them.
-
-For example, 
-
+Note that there may exist multiple valid ways for the insertion, as long as the tree remains a BST after insertion. You can return any of them.   
+For example,   
 Given the tree:  
 
         4
@@ -36,26 +33,14 @@ This tree is also valid:
          \
           4
 
-
-## 参考答案   
-
-
-#### 分析
-
+## Solutions  
+### Analysis
 如题目所示，考察二叉搜索树的插入操作，第一时间想到的是递归法和迭代法。（想不明白为什么Memory Usage那么高..）
-
-#### 思路
-略
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.递归法
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
 * Memory Usage: 50.1 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
-
 ```Java
 /**
  * @author RyuuI
@@ -87,13 +72,9 @@ class Solution {
     }
 }
 ```
-
-
 2.迭代法  
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
 * Memory Usage: 50.3 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
-
 ```Java
 /**
  * @author RyuuI
@@ -147,15 +128,8 @@ class Solution {
         return root;  
     }
 }
-
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
