--- a/solution/701.Insert-into-a-Binary-Search-Tree.md
+++ b/solution/701.Insert-into-a-Binary-Search-Tree.md
@@ -1,5 +1,5 @@
 # 701. Insert into a Binary Search Tree
-## 信息卡片
+## Information
 * Date：2020-01-20
 * Link：[English](https://leetcode.com/problems/insert-into-a-binary-search-tree/)/[中文](https://leetcode-cn.com/problems/insert-into-a-binary-search-tree/)
 * Tag：`Tree`
