--- a/solution/1267.Count-Servers-that-Communicate.md
+++ b/solution/1267.Count-Servers-that-Communicate.md
@@ -1,32 +1,27 @@
-# 1267. Count Servers that Communicate[统计参与通信的服务器]
-
-## 信息卡片
-
-* 时间：2020-02-12
-* 题目链接：[English](https://leetcode.com/problems/count-servers-that-communicate/)/[中文](https://leetcode-cn.com/problems/count-servers-that-communicate/)
+# 1267. Count Servers that Communicate
+## Information
+* Date：2020-02-12
+* Link：[English](https://leetcode.com/problems/count-servers-that-communicate/)/[中文](https://leetcode-cn.com/problems/count-servers-that-communicate/)
 * Tag：`Array` `Graph`
-## 题目描述
+
+## Problem Description
 You are given a map of a server center, represented as a m * n integer matrix grid, where 1 means that on that cell there is a server and 0 means that it is no server. Two servers are said to communicate if they are on the same row or on the same column.  
 Return the number of servers that communicate with any other server.  
-
 ### Example 1:  
 ![Image text](../img/1267_ex1.png)  
 Input: grid = [[1,0],[0,1]]  
 Output: 0  
 Explanation: No servers can communicate with others.  
-
 ### Example 2:  
 ![Image text](../img/1267_ex2.png) 
 Input: grid = [[1,0],[1,1]]  
 Output: 3  
 Explanation: All three servers can communicate with at least one other server.  
-
 ### Example 3:  
 ![Image text](../img/1267_ex3.png)  
 Input: grid = [[1,1,0,0],[0,0,1,0],[0,0,1,0],[0,0,0,1]]  
 Output: 4  
 Explanation: The two servers in the first row can communicate with each other. The two servers in the third column can communicate with each other. The server at right bottom corner can't communicate with any other server.  
-
 ### Constraints:
 * m == grid.length
 * n == grid[i].length
@@ -34,28 +29,17 @@ Explanation: The two servers in the first row can communicate with each other. T
 * 1 <= n <= 250
 * grid[i][j] == 0 or 1
 
-
-## 参考答案   
-
-
-#### 分析
-
-这题的关键在于将符合条件的结点从1更改为其他值（如1 -> 2），并统计其数量
-
-#### 思路
+## Solutions  
+### Analysis
+这题的关键在于将符合条件的结点从1更改为其他值（如1 -> 2），并统计其数量。  
 这里提供两种解法。
 * 方法1: 将邻接矩阵转化为邻接数组or邻接链表，根据每个邻接表的数量判断是否符合条件;
 * 方法2: 直接横向遍历和纵向遍历矩阵，寻找符合条件的元素
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.邻接数组/邻接链表法
-
 * Runtime: 3 ms, faster than 79.81% of Java online submissions for Count Servers that Communicate.
 * Memory Usage: 44.9 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
-
 ```Java
 /**
  * @author RyuuI
@@ -110,13 +94,9 @@ class Solution {
     }
 }
 ```
-
-
 2.横向遍历+纵向遍历法
-
 * Runtime: 2 ms, faster than 99.04% of Java online submissions for Count Servers that Communicate.
 * Memory Usage: 47 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
-
 ```Java
 /**
  * @author RyuuI
@@ -167,13 +147,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
