docs(solution/34.find-first-and-last-position-of-element-in-sorted-array.md): add some memo

--- a/solution/34.Find-First-and-Last-Position-of-Element-in-Sorted-Array.md
+++ b/solution/34.Find-First-and-Last-Position-of-Element-in-Sorted-Array.md
@@ -27,7 +27,7 @@ Output: [-1,-1]
 
 ## Solutions  
 ### Analysis
-Use binary search to find the target, if the target number is gotten in the array, use two pointer to find the left index and right index of target range.
+Use binary search to find the target, if the target number is gotten in the array, use two pointer to find the left index and right index of target range. We can get the position of target by log(n).
 ### Source Code
 #### Java
 #### C
