--- a/solution/696.Count-Binary-Substrings.md
+++ b/solution/696.Count-Binary-Substrings.md
@@ -1,4 +1,4 @@
-# 647. Palindromic Substrings
+# 696. Count Binary Substrings
 ## Information
 * Date：2021-03-01
 * Link：[English](https://leetcode.com/problems/count-binary-substrings/)/[中文](https://leetcode-cn.com/problems/count-binary-substrings/)
