fix(*): add the C++/Go solution of No.637 problem

--- a/solution/637.Average-of-Levels-in-Binary-Tree.md
+++ b/solution/637.Average-of-Levels-in-Binary-Tree.md
@@ -23,7 +23,7 @@ The average value of nodes on level 0 is 3,  on level 1 is 14.5, and on level 2 
 这道题是层次遍历的算法，只要遍历每一层，并且计算其平均值即可。值得注意的是，本题的存储要考虑到int型可能发生溢出，所以应该使用long型存储和的结果。  
 ### Source Code
 #### Java
-1.递归法
+##### 递归法
 * Runtime: 2 ms, faster than 93.92% of Java online submissions for Average of Levels in Binary Tree.
 * Memory Usage: 42.9 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
 ```Java
@@ -70,7 +70,7 @@ class Solution {
 	}
 }
 ```
-2.迭代法
+##### 迭代法
 * Runtime: 5 ms, faster than 11.58% of Java online submissions for Average of Levels in Binary Tree.
 * Memory Usage: 44.7 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
 ```Java
@@ -122,5 +122,88 @@ class Solution {
 ```
 #### C
 #### C++
+##### 迭代法
+* Runtime: 16 ms, faster than 51.83% of C++ online submissions for Average of Levels in Binary Tree.
+* Memory Usage: 22.5 MB, less than 32.79% of C++ online submissions for Average of Levels in Binary Tree.
+```cpp
+/**
+ * @author RyuuI
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    vector<double> averageOfLevels(TreeNode* root) {
+        vector<double> res;
+        queue<TreeNode*> que;
+        double sum = 0;
+        int count = 0;
+
+        que.push(root);
+        que.push(nullptr);
+        
+        while(que.front()){
+            TreeNode* head = que.front();
+            que.pop();
+            if(head->left) que.push(head->left);
+            if(head->right) que.push(head->right);
+            sum += head->val;
+            ++count;
+            if(!que.front()){
+                que.pop();
+                que.push(nullptr);
+                res.push_back(sum/count);
+                count =0;
+                sum = 0;
+            }
+        }
+        return res;
+    }
+};
+```
 #### Python
+#### Go
+##### 迭代法
+* Runtime: 8 ms, faster than 83.74% of Go online submissions for Average of Levels in Binary Tree.
+* Memory Usage: 6.2 MB, less than 90.74% of Go online submissions for Average of Levels in Binary Tree.
+```go
+/**
+ * @author RyuuI
+ * Definition for a binary tree node.
+ * type TreeNode struct {
+ *     Val int
+ *     Left *TreeNode
+ *     Right *TreeNode
+ * }
+ */
+func averageOfLevels(root *TreeNode) []float64 {
+    que := [](*TreeNode){}
+	que = append(que,root,nil)
+	count, sum := 0, 0.0
+	res := []float64{}
+
+	for que[0] !=nil {
+		head := que[0]
+		que = que[1:]
+        sum += float64(head.Val)
+		count++
+		if head.Left != nil { que = append(que, head.Left) }
+		if head.Right != nil { que = append(que, head.Right) }
+		if que[0] == nil {
+			que = que[1:]
+			que = append(que, nil)
+            res = append(res, float64(sum/float64(count)))
+			count, sum = 0, 0.0
+		}
+	} 
+	return res 
+}
+```
 #### JS
