docs(*): add the cpp&golang solution of No.215 problem

--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -17,16 +17,16 @@ You may assume k is always valid, 1 ≤ k ≤ array's length.
 
 ## Solutions 
 ### Analysis
-求第K大的数，有两个解题思路：最大堆和快速选择。
-* 最大堆：将所有数推入最大堆，第K个弹出的数即为第K大的数，可以在原地进行最大堆排序，其时间复杂度是O(logn)。
-* 快速选择：通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n);    
+求第K大的数，有两个解题思路：最大堆和快速选择。   
+   **最大堆：**将所有数推入最大堆，第K个弹出的数即为第K大的数，可以在原地进行最大堆排序，其时间复杂度是O(logn)。   
+   **快速选择：**通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n);     
   将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
   > 如果基准元素在左侧，则删除中间+右侧的所有元素；  
   > 如果基准元素在右侧，则删除中间+左侧的所有元素；  
   > 如果基准元素在中间，则直接弹出基准元素。  
 ### Source Code
 #### Java
-1.最大堆
+##### 1.最大堆
 * Runtime: 2 ms, faster than 80.22% of Java online submissions for Kth Largest Element in an Array.
 * Memory Usage: 39.4 MB, less than 95.80% of Java online submissions for Kth Largest Element in an Array.
 ```Java
@@ -92,7 +92,7 @@ class Solution {
     }
 }
 ```
-2.快速选择 
+##### 2.快速选择 
 * Runtime: 2 ms, faster than 80.22% of Java online submissions for Kth Largest Element in an Array.
 * Memory Usage: 39.5 MB, less than 88.45% of Java online submissions for Kth Largest Element in an Array.
 ```Java
@@ -165,5 +165,212 @@ class Solution {
 ```
 #### C
 #### C++
+##### 1.最大堆
+* Runtime: 16 ms, faster than 23.70% of C++ online submissions for Kth Largest Element in an Array.
+* Memory Usage: 10.3 MB, less than 13.20% of C++ online submissions for Kth Largest Element in an Array.
+```cpp
+/**
+ * @author RyuuI
+ */
+class Solution {
+public:
+    int findKthLargest(vector<int>& nums, int k) {
+        vector<int> myPrioQue;
+        for(auto num:nums) add(myPrioQue, num);
+        while((k--)>1) pop(myPrioQue);
+        return pop(myPrioQue);
+    }
+
+private:
+    void add(vector<int>& prioQue, int num){
+        prioQue.push_back(num);
+        swim(prioQue);
+    }
+
+    int pop(vector<int>& prioQue){
+        int popValue = prioQue[0];
+        swap(prioQue, 0, prioQue.size()-1);
+        sink(prioQue);
+        return popValue;
+    }
+
+    void swim(vector<int>& prioQue){
+        int index = prioQue.size()-1;
+        while(index>0 && prioQue[(index-1)/2]<prioQue[index]){
+            swap(prioQue, (index-1)/2, index);
+            index = (index-1)/2;
+        }
+    }
+
+    void sink(vector<int>& prioQue){
+        int index=0;
+        prioQue.pop_back();
+        while(index*2+1<prioQue.size()){
+            int objIndex = index;
+            if(prioQue[objIndex]<prioQue[index*2+1]) objIndex = index*2+1;
+            if(index*2+2<prioQue.size() && prioQue[objIndex]<prioQue[index*2+2]) objIndex = index*2+2;
+            if(objIndex==index) break;
+            swap(prioQue,objIndex,index);
+            index = objIndex;
+        }
+    }
+
+    void swap(vector<int>& prioQue, int index1, int index2){
+        int tmp = prioQue[index1];
+        prioQue[index1] = prioQue[index2];
+        prioQue[index2] = tmp;
+    }
+};
+```
+##### 2.快速选择 
+* Runtime: 12 ms, faster than 31.49% of C++ online submissions for Kth Largest Element in an Array.
+* Memory Usage: 9.8 MB, less than 97.38% of C++ online submissions for Kth Largest Element in an Array.
+```cpp
+/**
+ * @author RyuuI
+ */
+class Solution {
+public:
+    int findKthLargest(vector<int>& nums, int k) {
+        return subFindKthLarget(nums,k,0,nums.size()-1);
+    }
+private:
+    int subFindKthLarget(vector<int> & nums, int k, int left, int right){
+        int keyNum = nums[left];
+        int firIndex=left, secIndex=right+1, i=left+1;
+        while(i<secIndex){
+            if(keyNum>nums[i]){
+                swap(nums[i],nums[--secIndex]);
+                continue;
+            }
+            else if(keyNum<nums[i]){
+                swap(nums[i],nums[++firIndex]);
+            }
+            ++i;    
+        }
+        swap(nums[left],nums[firIndex--]);
+
+        if(firIndex-left+1>=k){
+            return subFindKthLarget(nums, k, left, firIndex);
+        }
+        else if(secIndex-left<k){
+            return subFindKthLarget(nums, k-secIndex+left, secIndex, right);
+        }
+        else {
+            return nums[firIndex+1];
+        }
+    }
+
+    void swap(int &num1, int &num2){
+        int tmp = num1;
+        num1 = num2;
+        num2 = tmp;
+    }
+};
+```
 #### Python
+#### Go
+##### 1.最大堆
+* Runtime: 4 ms, faster than 97.35% of Go online submissions for Kth Largest Element in an Array.
+* Memory Usage: 4.5 MB, less than 12.67% of Go online submissions for Kth Largest Element in an Array.
+```go
+/**
+ * @author RyuuI
+ */
+func findKthLargest(nums []int, k int) int {
+    myPrioQue := make([]int,0)
+    for _,v:= range nums {
+        add(&myPrioQue, v)
+    } 
+    for k>1 {
+        pop(&myPrioQue)
+        k--
+    }
+    return myPrioQue[0]
+}
+
+func add(nums *[]int, num int){
+    *nums = append(*nums, num)
+    swim(nums)
+}
+
+func pop(nums *[]int) int {
+    top := (*nums)[0]
+    swap(nums, 0, len(*nums)-1)
+    *nums = (*nums)[0:len(*nums)-1]
+    sink(nums)
+    return top
+}
+
+func swim(nums *[]int){
+    index := len(*nums)-1
+    for (index-1)/2 >=0 && ((*nums)[index]>(*nums)[(index-1)/2]) {
+            swap(nums,index, (index-1)/2)
+            index = (index-1)/2
+    }
+}
+
+func sink(nums *[]int){
+    index := 0
+    for index*2+1<len(*nums){
+        objIndex := index
+        if (*nums)[objIndex]<(*nums)[index*2+1] { objIndex = index*2+1}
+        if index*2+2<len(*nums) && (*nums)[objIndex]<(*nums)[index*2+2] {objIndex = index*2+2}
+        if objIndex == index {break}
+        swap(nums,objIndex,index)
+        index = objIndex
+    }
+}
+
+func swap(nums *[]int, index1, index2 int ){
+    tmp := (*nums)[index1];
+    (*nums)[index1] = (*nums)[index2];
+    (*nums)[index2] = tmp;
+}
+```
+##### 2.快速选择 
+* Runtime: 8 ms, faster than 56.70% of Go online submissions for Kth Largest Element in an Array.
+* Memory Usage: 3.5 MB, less than 100.00% of Go online submissions for Kth Largest Element in an Array.
+```go
+/**
+ * @author RyuuI
+ */
+func findKthLargest(nums []int, k int) int {
+    return subFindKthLargest(&nums, k, 0, len(nums)-1) 
+}
+
+
+func subFindKthLargest(nums *[]int, k,left,right int) int {
+    keyNum := (*nums)[left]
+    firIndex, secIndex, i := left, right+1, left+1
+    for i < secIndex {
+        if keyNum >(*nums)[i] {
+            secIndex--
+            swap(nums,i,secIndex)
+            continue
+        } else if keyNum<(*nums)[i]{
+            firIndex++
+            swap(nums,i,firIndex)
+        }
+        i++
+    }
+    swap(nums,left,firIndex)
+    firIndex--
+
+    if firIndex-left+1>=k {
+        return subFindKthLargest(nums, k, left, firIndex)
+    } else if secIndex-left<k {
+        return subFindKthLargest(nums, k-secIndex+left, secIndex, right)
+    } else {
+        return (*nums)[firIndex+1]
+    }
+}
+
+
+func swap(nums *[]int, index1,index2 int){
+    tmp := (*nums)[index1]
+    (*nums)[index1] = (*nums)[index2]
+    (*nums)[index2] = tmp
+}
+```
 #### JS
