--- a/solution/34.Find-First-and-Last-Position-of-Element-in-Sorted-Array.md
+++ b/solution/34.Find-First-and-Last-Position-of-Element-in-Sorted-Array.md
@@ -62,4 +62,33 @@ private:
 };
 ```
 #### Python
+#### Go
+* Runtime: 4 ms, faster than 99.44% of Go online submissions for Find First and Last Position of Element in Sorted Array.
+* Memory Usage: 4 MB, less than 51.32% of Go online submissions for Find First and Last Position of Element in Sorted Array.
+```go
+/**
+ * @author RyuuI
+ */
+func searchRange(nums []int, target int) []int {
+    left,right := 0,len(nums)-1
+    for left<=right {
+        mid := (left+right)/2
+        if nums[mid]==target {
+            return findTargetRange(&nums, target, mid)
+        } else if nums[mid]<target {
+            left = mid+1
+        } else {
+            right = mid-1;
+        }
+    }
+    return []int{-1,-1}
+}
+
+func findTargetRange(nums *[]int, target,mid int) []int{
+    left,right := mid,mid
+    for left>0 && (*nums)[left-1]==target {left--}
+    for right<len(*nums)-1 && (*nums)[right+1]==target {right++}
+    return []int{left, right}
+}
+```
 #### JS
