--- a/solution/75.Sort-Colors.md
+++ b/solution/75.Sort-Colors.md
@@ -50,4 +50,33 @@ public:
 };
 ```
 #### Python
+#### Go
+* Runtime: 0 ms, faster than 100.00% of Go online submissions for Sort Colors.
+* Memory Usage: 2.1 MB, less than 100.00% of Go online submissions for Sort Colors.
+```go
+/**
+ * @author RyuuI
+ */
+func sortColors(nums []int)  {
+    left, right, index := 0, len(nums)-1, 0
+    for index <= right {
+    	if nums[index]==0 {
+    		swap(&nums,left,index)
+    		left++
+    		index++
+    	} else if nums[index]==2 {
+    		swap(&nums,right,index)
+    		right--
+    	} else {
+    		index++
+    	}
+    }
+}
+
+func swap(nums *[]int, index1, index2 int) {
+    tmp := (*nums)[index1]
+	(*nums)[index1] = (*nums)[index2]
+	(*nums)[index2] = tmp
+}
+```
 #### JS
